--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <footer class="footer">
         <p class="footer__copy">&copy;2018 Russell Longstaff</p>
     </footer>
-    <script type="javascript" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
